<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
      android:enabled="true"
      android:key="@string/pref_category_key_camera"
      android:title="@string/pref_category_title_camera">

    <ListPreference
        android:key="@string/pref_key_rear_camera_preview_size"
        android:persistent="true"
        android:title="@string/pref_title_rear_camera_preview_size"/>

    <ListPreference
        android:key="@string/pref_key_front_camera_preview_size"
        android:persistent="true"
        android:title="@string/pref_title_front_camera_preview_size"/>


    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_camera_live_viewport"
        android:persistent="true"
        android:summary="@string/pref_summary_camera_live_viewport"
        android:title="@string/pref_title_camera_live_viewport"/>

  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_category_face_detection">

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_landmark_mode_no_landmarks"
        android:entries="@array/pref_entries_face_detector_landmark_mode"
        android:entryValues="@array/pref_entry_values_face_detector_landmark_mode"
        android:key="@string/pref_key_live_preview_face_detection_landmark_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_landmark_mode"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_contour_mode_all_contours"
        android:entries="@array/pref_entries_face_detector_contour_mode"
        android:entryValues="@array/pref_entry_values_face_detector_contour_mode"
        android:key="@string/pref_key_live_preview_face_detection_contour_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_contour_mode"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_classification_mode_no_classifications"
        android:entries="@array/pref_entries_face_detector_classification_mode"
        android:entryValues="@array/pref_entry_values_face_detector_classification_mode"
        android:key="@string/pref_key_live_preview_face_detection_classification_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_classification_mode"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast"
        android:entries="@array/pref_entries_face_detector_performance_mode"
        android:entryValues="@array/pref_entry_values_face_detector_performance_mode"
        android:key="@string/pref_key_live_preview_face_detection_performance_mode"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_performance_mode"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_live_preview_face_detection_face_tracking"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_face_tracking"/>

    <EditTextPreference
        android:defaultValue="0.1"
        android:dialogMessage="@string/pref_dialog_message_face_detector_min_face_size"
        android:key="@string/pref_key_live_preview_face_detection_min_face_size"
        android:persistent="true"
        android:title="@string/pref_title_face_detector_min_face_size"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:title="Cài đặt người dùng">
    <EditTextPreference
        android:defaultValue="0.99"
        android:key="@string/edit_text_preference_1"
        android:dialogMessage="Độ mở của mắt có thể thay đổi tuỳ theo độ mở rộng mắt của từng người (Ví dụ: Mắt bình thường: 0.99 - Mắt híp: 0.86)"
        android:persistent="true"
        android:title="Cài đặt độ mở của mắt" />

    <ListPreference
        android:defaultValue="5000"
        android:entries="@array/duration_name"
        android:entryValues="@array/duration_value"
        android:key="@string/key_duration_update_info"
        android:persistent="true"
        android:title="@string/duration_update_info"/>
  </PreferenceCategory>

</PreferenceScreen>
