<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg"
    tools:context=".note">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/hdsd"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collabtoolbar"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/ctr_bg"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:contentScrim="@color/blue1"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Tra cứu thông tin">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:subtitleTextColor="@color/white"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:text="Nồng độ cồn"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

            </TextView>

            <TextView
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="Người điều khiển xe mô tô, ô tô, máy kéo trên đường mà trong máu hoặc hơi thở có nồng độ cồn: Bị nghiêm cấm"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            </TextView>
            <View
                android:id="@+id/v1"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="Khoảng cách an toàn tối thiểu"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/v1"/>
            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/text1"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt1"/>

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="Trên đường cao tốc, trong đường hầm, đường vòng, đầu dốc, nơi tầm nhìn hạn chế"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txt2"/>
            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt3"/>
            <TextView
                android:id="@+id/txt5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="Thứ tự nhường xe"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/txt6"
                android:text="@string/text3"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txt5"/>
            <TextView
                android:id="@+id/txt7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="Phân nhóm biển báo hiệu"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt6"/>

            <TextView
                android:id="@+id/txt8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/text4"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt7"/>
            <TextView
                android:id="@+id/txt9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="Hiệu lệnh người điều khiển giao thông"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txt8"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt10"
                android:layout_marginTop="0dp"
                android:text="@string/text5"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt9"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt11"
                android:layout_marginTop="0dp"
                android:text="Nghiệp vụ vận tải"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt12"
                android:layout_marginTop="0dp"
                android:text="@string/text6"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt11"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt13"
                android:layout_marginTop="0dp"
                android:text="Kỹ thuật lái xe"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt12"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/txt14"
                android:text="@string/text7"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt13"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt15"
                android:layout_marginTop="0dp"
                android:text="Các lưu y khác"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt14"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/txt16"
                android:text="@string/text8"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt15"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>